kubernetes/linkding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-data
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app: linkding
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
spec:
  ingressClassName: traefik
  rules:
    - host: linkding.meceder.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
