kubernetes/omnitools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnitools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omnitools
  template:
    metadata:
      labels:
        app: omnitools
    spec:
      containers:
        - name: omnitools
          image: ghcr.io/iib0011/omni-tools:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: omnitools
spec:
  selector:
    app: omnitools
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omnitools
spec:
  ingressClassName: traefik
  rules:
    - host: omnitools.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omnitools
                port:
                  number: 80
